# gitoxide

./: Cargo.toml  crate-status.md
gitoxide-core/src/repository/: blame.rs  submodule.rs  worktree.rs
gix/: Cargo.toml
gix-actor/tests/identity/: mod.rs
gix-actor/tests/signature/: mod.rs
gix-blame/src/: error.rs  lib.rs  types.rs
gix-blame/src/file/: function.rs  mod.rs
gix-blame/tests/: blame.rs  interop.rs
gix-blame/tests/fixtures/: make_blame_interop_repo.sh
gix-blame/tests/fixtures/generated-archives/: make_blame_interop_repo.tar
gix-bundle/: Cargo.toml
gix-bundle/src/: create.rs  header.rs  lib.rs  verify.rs
gix-bundle/tests/: integrate.rs
gix-bundle/tests/bundle/: builder.rs  header_parse.rs  header_write.rs  interop.rs  mod.rs  verify.rs
gix-config-value/src/: path.rs
gix-date/: Cargo.toml
gix-date/tests/: proptest_time_roundtrip.rs
gix-diff/src/blob/: mod.rs  patch.rs
gix-diff/tests/diff/blob/: mod.rs  patch.rs  unified_diff.rs
gix-diff/tests/fixtures/: make_diff_comparison_repo.sh
gix-diff/tests/fixtures/generated-archives/: make_diff_comparison_repo.tar
gix-error/src/concrete/: parse.rs
gix-hash/: Cargo.toml
gix-hash/tests/: proptest_hex_roundtrip.rs
gix-index/src/: lib.rs  write.rs  write_tree.rs
gix-index/src/access/: mod.rs
gix-index/tests/index/: access.rs  mod.rs  write_tree.rs
gix-index/tests/index/file/: write.rs
gix-note/: Cargo.toml
gix-note/src/: lib.rs
gix-object/: Cargo.toml
gix-object/tests/: proptest_commit_roundtrip.rs
gix-pack/fuzz/: Cargo.toml
gix-pack/fuzz/artifacts/delta_apply/: crash-4b0d848dbd1b7ff4c423d4b0f566a5c234642c79
gix-pack/fuzz/artifacts/pack_entry/: crash-ff528767eacb2456c5800160199cb56f0dee8e5c
gix-pack/fuzz/fuzz_targets/: delta_apply.rs  pack_entry.rs  pack_header.rs
gix-pack/src/data/entry/: decode.rs
gix-pack/src/data/input/: bytes_to_entries.rs
gix-pack/tests/: Cargo.toml
gix-pack/tests/pack/data/: header.rs
gix-packetline/: Cargo.toml
gix-packetline/fuzz/: Cargo.toml
gix-packetline/fuzz/fuzz_targets/: decode.rs  streaming.rs
gix-packetline/src/: lib.rs
gix-packetline/tests/decode/: mod.rs
gix-packetline/tests/encode/: mod.rs
gix-protocol/: Cargo.toml
gix-protocol/src/: lib.rs
gix-protocol/src/push/: error.rs  function.rs  mod.rs  response.rs  types.rs
gix-protocol/tests/protocol/: mod.rs
gix-protocol/tests/protocol/push/: mod.rs  response.rs  types.rs
gix-rebase/: Cargo.toml
gix-rebase/src/: lib.rs
gix-rebase/tests/: integration.rs  rebase.rs
gix-refspec/src/: parse.rs
gix-refspec/tests/refspec/: match_group.rs
gix-refspec/tests/refspec/parse/: fetch.rs  push.rs
gix-reftable/: Cargo.toml
gix-reftable/fuzz/: Cargo.toml
gix-reftable/fuzz/artifacts/fuzz_ref_record/: oom-cda513728f5abf75e5fdc4ab5b14dda18db7e969
gix-reftable/fuzz/fuzz_targets/: fuzz_ref_record.rs  fuzz_varint.rs
gix-reftable/src/: block.rs  lib.rs  write.rs
gix-reftable/tests/: block_readwrite_tests.rs  interop_tests.rs  proptest_varint.rs  record_tests.rs
gix-sec/src/: identity.rs
gix-sequencer/: Cargo.toml
gix-sequencer/src/: lib.rs
gix-sequencer/src/todo/: mod.rs  parse.rs  write.rs
gix-sequencer/tests/: sequencer.rs
gix-sequencer/tests/todo_tests/: todo.rs
gix-submodule/src/: access.rs  config.rs
gix-url/: Cargo.toml
gix-url/tests/url/: main.rs  proptests.rs
gix-validate/: Cargo.toml
gix-validate/tests/: proptest_refname.rs
gix/src/: bundle.rs  hook.rs  lib.rs
gix/src/config/: mod.rs
gix/src/config/snapshot/: _impls.rs  access.rs
gix/src/config/tree/sections/: core.rs  user.rs
gix/src/remote/: mod.rs  push.rs
gix/src/remote/connection/: mod.rs
gix/src/remote/connection/push/: error.rs  mod.rs  send_pack.rs
gix/src/repository/: blame.rs  cherry_pick.rs  hook.rs  mod.rs  note.rs  reset.rs  signing.rs  stash.rs  worktree_ops.rs
gix/src/repository/config/: mod.rs
gix/src/status/iter/: types.rs
gix/src/submodule/: errors.rs  git_dir_layout.rs  init_impl.rs  mod.rs  update.rs  update_impl.rs
gix/src/worktree/: add.rs  lock.rs  mod.rs  move.rs  prune.rs  remove.rs  repair.rs
gix/tests/fixtures/: make_cherry_pick_conflict_repo.sh  make_cherry_pick_interop_repo.sh  make_cherry_pick_test_repo.sh  make_config_edit_repo.sh  make_hooks_repo.sh  make_note_repo.sh  make_push_repos.sh  make_reset_interop_repo.sh  make_reset_repo.sh  make_stash_repo.sh  make_submodule_update.sh  make_worktree_repo_for_mutation.sh
gix/tests/fixtures/generated-archives/: make_cherry_pick_conflict_repo.tar  make_cherry_pick_interop_repo.tar  make_cherry_pick_test_repo.tar  make_config_edit_repo.tar  make_hooks_repo.tar  make_note_repo.tar  make_push_repos.tar  make_reset_interop_repo.tar  make_reset_repo.tar  make_stash_repo.tar  make_submodule_update.tar  make_worktree_repo_for_mutation.tar
gix/tests/gix/: cherry_pick.rs  main.rs  note.rs  push.rs  reset.rs  signing.rs  stash.rs  submodule_update.rs
gix/tests/gix/config/: edit.rs  mod.rs
gix/tests/gix/remote/: fetch.rs  ref_map.rs
gix/tests/gix/repository/: hook.rs  mod.rs  worktree.rs
gix/tests/gix/repository/config/config_snapshot/: mod.rs
src/plumbing/: main.rs
src/plumbing/options/: mod.rs
tests/it/src/commands/: blame_copy_royal.rs
