lints.workspace = true

[package]
name = "gix-bundle"
version = "0.1.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "Read and write git bundle files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.22.0", path = "../gix-hash" }

bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.17"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
