lints.workspace = true

[package]
name = "gix-note"
version = "0.0.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing with git notes"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.22.0", path = "../gix-hash" }
gix-object = { version = "^0.55.0", path = "../gix-object" }
thiserror = "2.0.0"
bstr = { version = "1.5.0", default-features = false, features = ["std"] }
