lints.workspace = true

[package]
name = "gix-packetline"
version = "0.21.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing the pkt-line serialization format"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
#! By default, all IO related capabilities will be missing unless one of the following is chosen.
default = []

## Enable blocking I/O API.
blocking-io = []
## Enable async I/O API using IO traits from `futures-io`.
# no `dep:` for futures-lite (https://github.com/rust-secure-code/cargo-auditable/issues/124)
async-io = ["dep:futures-io", "futures-lite", "dep:pin-project-lite"]

#! ### Other
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde", "faster-hex/serde"]

[[test]]
name = "async-packetline"
path = "tests/async-packetline.rs"
required-features = ["async-io"]

[[test]]
name = "blocking-packetline"
path = "tests/blocking-packetline.rs"
required-features = ["blocking-io", "maybe-async/is_sync"]

[dependencies]
gix-trace = { version = "^0.1.18", path = "../gix-trace" }

serde = { version = "1.0.114", optional = true, default-features = false, features = ["std", "derive"] }
thiserror = "2.0.18"
faster-hex = { version = "0.10.0", default-features = false, features = ["std"] }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
# async support
futures-io = { version = "0.3.32", optional = true }
futures-lite = { version = "2.1.0", optional = true }
pin-project-lite = { version = "0.2.6", optional = true }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-odb = { path = "../gix-odb" }
gix-pack-for-configuration = { package = "gix-pack", path = "../gix-pack", default-features = false, features = ["streaming-input"] }
gix-hash = { path = "../gix-hash", features = ["sha1"] }
async-std = { version = "1.9.0", features = ["attributes"] }
maybe-async = "0.2.6"
proptest = "1"

[package.metadata.docs.rs]
features = ["document-features", "blocking-io", "serde"]
