lints.workspace = true

[package]
name = "gix-sequencer"
version = "0.0.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project handling sequences of human-aided operations"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.22.0", path = "../gix-hash" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.17"

[dev-dependencies]
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
gix-hash = { version = "^0.22.0", path = "../gix-hash" }
