lints.workspace = true

[package]
name = "gix-url"
version = "0.35.2"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing parsing and serialization of gix-url"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "tests/baseline/**/*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "bstr/serde"]

[dependencies]
gix-path = { version = "^0.11.1", path = "../gix-path" }

serde = { version = "1.0.114", optional = true, default-features = false, features = ["std", "derive"] }
thiserror = "2.0.18"
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
percent-encoding = "2.3.1"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
gix-testtools = { path = "../tests/tools" }
proptest = "1"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
