lints.workspace = true

[package]
name = "gix-validate"
version = "0.11.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "Validation functions for various kinds of names in git"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false
test = true

[dependencies]
bstr = { version = "1.12.0", default-features = false, features = ["std"] }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
proptest = "1.6.0"
