lints.workspace = true

[package]
name = "gix-pack-tests"
version = "0.0.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Tests for the gix-pack crate"
edition = "2021"
rust-version = "1.82"

[features]
gix-features-parallel = ["gix-features/parallel"]
all-features = ["gix-pack/object-cache-dynamic", "gix-pack/pack-cache-lru-dynamic", "gix-pack/pack-cache-lru-static"]

[[test]]
name = "pack"
path = "integrate.rs"

[dev-dependencies]
gix-pack = { path = "..", features = ["generate", "streaming-input"] }
gix-features = { path = "../../gix-features" }
gix-testtools = { path = "../../tests/tools" }
gix-odb = { path = "../../gix-odb" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
maplit = "1.0.2"
gix-object = { path = "../../gix-object" }
gix-traverse = { path = "../../gix-traverse" }
gix-hash = { path = "../../gix-hash", features = ["sha256"] }
memmap2 = "0.9.10"
proptest = "1"
